@@ -1,3 +1,20 @@
+/*
+ * Copyright (C) 2021  Consiglio Nazionale delle Ricerche
+ *
+ *     This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU Affero General Public License as
+ *     published by the Free Software Foundation, either version 3 of the
+ *     License, or (at your option) any later version.
+ *
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU Affero General Public License for more details.
+ *
+ *     You should have received a copy of the GNU Affero General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 package manager;
 
 import com.google.common.base.Optional;
@@ -17,7 +34,6 @@ import lombok.extern.slf4j.Slf4j;
 import manager.configurations.ConfigurationManager;
 import manager.configurations.EpasParam;
 import manager.configurations.EpasParam.EpasParamValueType.LocalTimeInterval;
-import manager.services.absences.AbsenceForm;
 import manager.services.absences.AbsenceService;
 import manager.services.absences.AbsenceService.InsertReport;
 import models.ContractWorkingTimeType;
@@ -29,7 +45,6 @@ import models.WorkingTimeType;
 import models.WorkingTimeTypeDay;
 import models.absences.Absence;
 import models.absences.AbsenceType;
-import models.absences.CategoryTab;
 import models.absences.GroupAbsenceType;
 import models.absences.JustifiedType;
 import models.absences.JustifiedType.JustifiedTypeName;
@@ -86,6 +101,7 @@ public class MissionManager {
   /**
    * Metodo che verifica se al numero di matricola passato come parametro nel dto corrisponde
    * effettivamente una persona in anagrafica.
+   *
    * @param mission il dto creato dal json arrivato dal listener
    * @return la person, se esiste, associata alla matricola contenuta nel dto.
    */
@@ -113,6 +129,7 @@ public class MissionManager {
 
   /**
    * Metodo che crea la missione a partire dai dati del dto inviato da Missioni.
+   *
    * @param body il dto ricavato dal json arrivato dal listener
    * @param recompute se deve essere avviato il ricalcolo
    * @return true se riesce a inserire la missione con i parametri esplicitati nel body, 
@@ -166,9 +183,9 @@ public class MissionManager {
     if (body.dataInizio.toLocalDate().isEqual(body.dataFine.toLocalDate())) {
       //caso di giorno unico di missione
       situation = getSituation(body.dataInizio, body, workInterval);
-      if (insertMission(body.destinazioneMissione, body.person, 
-          new Integer(situation.difference / DateTimeConstants.MINUTES_PER_HOUR), 
-          new Integer(situation.difference % DateTimeConstants.MINUTES_PER_HOUR),
+      if (insertMission(body.destinazioneMissione, body.person,
+          Integer.valueOf(situation.difference / DateTimeConstants.MINUTES_PER_HOUR),
+          Integer.valueOf(situation.difference % DateTimeConstants.MINUTES_PER_HOUR),
           body.dataInizio, body.dataFine, body.id, body.idOrdine, body.anno, body.numero)) {
         recalculate(body, Optional.<List<Absence>>absent());
         return true;
@@ -191,6 +208,7 @@ public class MissionManager {
   
   /**
    * Metodo di utilità per calcolare la situazione delle ore da giustificare per la missione.
+   *
    * @param actualDate la data che si sta considerando
    * @param body l'oggetto contenente le info di missione
    * @param workInterval l'intervallo di inizio/fine attività lavorativa per missione
@@ -245,6 +263,7 @@ public class MissionManager {
 
   /**
    * Metodo di utilità.
+   *
    * @param body il dto proveniente da Missioni
    * @param actualDate il giorno di missione
    * @return il workingTimeTypeDay dell'ultimo giorno di missione.
@@ -270,6 +289,7 @@ public class MissionManager {
   /**
    * Metodo che ricontrolla le date della missione dopo le info pervenute da Missioni in occasione
    * del rimborso.
+   *
    * @param body il dto contenente i dati della missione
    * @param recompute se deve essere effettuato il ricalcolo
    * @return true se la gestione della missione è andata a buon fine, false altrimenti.
@@ -365,6 +385,7 @@ public class MissionManager {
 
   /**
    * Metodo che cancella una missione inviata precedentemente da Missioni.
+   *
    * @param body il dto contenente i dati della missione
    * @param recompute se devono essere effettuati i ricalcoli
    * @return true se la missione viene cancellata, false altrimenti.
@@ -396,6 +417,7 @@ public class MissionManager {
 
   /**
    * Metodo privato che ritorna la lista delle date su cui fare i controlli.
+   *
    * @param body il dto contenente i dati della missione
    * @return la lista delle date da considerare per gestire la missione.
    */
@@ -411,6 +433,7 @@ public class MissionManager {
 
   /**
    * Metodo privato che inserisce i giorni di missione.
+   *
    * @param body il dto contenente le informazioni della missione
    * @param absenceForm l'absenceForm relativo alla missione
    * @param hours le ore 
@@ -447,17 +470,24 @@ public class MissionManager {
     if (quantity < 0) {
       mission = absenceTypeDao.getAbsenceTypeByCode("92NG").get();
       type = absComponentDao.getOrBuildJustifiedType(JustifiedTypeName.nothing);
-      
+
     } else if (quantity == 0 || quantity > getFromDayOfMission(person, to.toLocalDate()).workingTime
         || day == DateTimeConstants.SATURDAY || day == DateTimeConstants.SUNDAY) {
       type = absComponentDao
           .getOrBuildJustifiedType(JustifiedTypeName.complete_day_and_add_overtime);
-      
+
     } else {
       group = absComponentDao.groupAbsenceTypeByName(DefaultGroup.MISSIONE_ORARIA.name()).get();
       mission = absenceTypeDao.getAbsenceTypeByCode("92M").get();
       type = absComponentDao
           .getOrBuildJustifiedType(JustifiedType.JustifiedTypeName.specified_minutes);      
+    }
+
+    if (mission == null) {
+      log.error("Impossibile determinare il tipo di missione 92/92E/92NG/... "
+          + "Missione per {}, numero {}, dal {} al {}, orario {}:{}",
+          person.getFullname(), numero, from, to, hours, minutes);
+      return false;
     }
     
     log.debug(LOG_PREFIX + "Sto per inserire una missione per {}. Codice {}, {} - {}, "
@@ -465,8 +495,6 @@ public class MissionManager {
     
     Integer localHours = hours;
     Integer localMinutes = minutes;
-  
-    //val absenceForm = buildAbsenceForm(person, from.toLocalDate(), to.toLocalDate(), group);
 
     InsertReport insertReport = 
         absenceService.insert(person, group, from.toLocalDate(), 
@@ -515,6 +543,7 @@ public class MissionManager {
 
   /**
    * Metodo che si occupa di cancellare i singoli giorni di missione.
+   *
    * @param missions la lista delle assenze da cancellare
    * @param absenceForm l'absenceForm per notificare la cancellazione dell'assenza
    * @return true se la cancellazione è andata a buon fine, false altrimenti.
@@ -543,6 +572,7 @@ public class MissionManager {
 
   /**
    * Metodo che cancella dal personDay l'assenza.
+   *
    * @param abs l'assenza (missione) da cancellare
    * @param result se la rimozione precedente è andata a buon fine
    * @return true se l'assenza è stata cancellata, false altrimenti.
@@ -561,28 +591,9 @@ public class MissionManager {
     return result;
   }
 
-  private AbsenceForm buildAbsenceForm(MissionFromClient body) {
-    CategoryTab categoryTab = null;
-    GroupAbsenceType groupAbsenceType = null;
-    AbsenceType absenceType = null;
-    JustifiedType justifiedType = null;
-    Integer hours = null;
-    Integer minutes = null;
-    AbsenceForm absenceForm =
-        absenceService.buildAbsenceForm(body.person, body.dataInizio.toLocalDate(), 
-            categoryTab, body.dataFine.toLocalDate(), null, 
-            groupAbsenceType, false, absenceType, justifiedType, hours, minutes, false, false);
-    return absenceForm;
-  }
-
-  private AbsenceForm buildAbsenceForm(Person person, LocalDate dataInizio, 
-      LocalDate dataFine, GroupAbsenceType group) {
-    return absenceService.buildAbsenceForm(person, dataInizio, null, dataFine, null, group, false, 
-        null, null, null, null, false, false);
-  }
-
   /**
    * ricalcola la situazione del dipendente.
+   *
    * @param body il dto contenente le info dell'ordine/rimborso di missione
    */
   private void recalculate(MissionFromClient body, Optional<List<Absence>> missions) {
@@ -601,6 +612,7 @@ public class MissionManager {
   /**
    * Metodo privato che ritorna la localDateTime associata alla data passata come parametro
    * da ricercare all'interno del periodo inizio/fine missione del body.
+   *
    * @param date la data che si sta cercando
    * @param body l'oggetto mission from client
    * @return il localDateTime relativo alla data passata come parametro calcolato internamente
@@ -622,6 +634,7 @@ public class MissionManager {
   
   /**
    * Metodo che consente l'inserimento di un'assenza per missione sul giorno indicato.
+   *
    * @param situation l'oggetto contenente la situazione relativa al giorno di missione
    * @param body l'oggetto dto proveniente dal mission manager
    * @param actualDate la data attuale su cui lavorare
@@ -633,7 +646,8 @@ public class MissionManager {
       if (situation.difference < 0) {
         //sono partito dopo la fine della giornata lavorativa o sono tornato prima dell'inizio 
         //della stessa --> metto un 92M con 1 minuto
-        if (insertMission(body.destinazioneMissione, body.person, new Integer(0), new Integer(-1), 
+        if (insertMission(body.destinazioneMissione, body.person, 
+            Integer.valueOf(0), Integer.valueOf(-1), 
             actualDate, actualDate, body.id, body.idOrdine, body.anno, body.numero)) {
           missionInserted = true;
         } 
@@ -646,8 +660,8 @@ public class MissionManager {
           } 
         } else {
           if (insertMission(body.destinazioneMissione, body.person,  
-              new Integer(situation.difference / DateTimeConstants.MINUTES_PER_HOUR), 
-              new Integer(situation.difference % DateTimeConstants.MINUTES_PER_HOUR), 
+              Integer.valueOf(situation.difference / DateTimeConstants.MINUTES_PER_HOUR), 
+              Integer.valueOf(situation.difference % DateTimeConstants.MINUTES_PER_HOUR), 
               actualDate, actualDate, body.id, body.idOrdine, body.anno, body.numero)) {
             missionInserted = true;
           } 
@@ -668,7 +682,8 @@ public class MissionManager {
   
   /**
    * Classe privata di aiuto.
-   * @author dario     
+   *
+   * @author Dario Tagliaferri
    */
   private static class Situation {
     private int difference;
